Fixed display on mobile phones

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -37,4 +37,7 @@
   width: 100%;
   max-height: 100vh;
   overflow-y: auto;
+  @media screen and (max-width: $tablet) {
+    max-height: 100%;
+  }
 }
