--- a/src/components/OrderForm/components/Location/Location.scss
+++ b/src/components/OrderForm/components/Location/Location.scss
@@ -27,6 +27,9 @@
     color: $mainBlack;
     position: relative;
     margin: $medium 0 $small;
+    @media screen and (max-width: $tablet) {
+      margin-top: $small;
+    }
   }
 
   &__map {
@@ -37,7 +40,7 @@
     }
     @media screen and (max-width: $mobile) {
       width: 100%;
-      height: 60%;
+      height: 224px;
     }
   }
 }
